<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="a">Cheetah</string>
    <string name="Search">Search</string>
    <string name="gp">Group behavior: Solitary/Pairs</string>
    <string name="hab">Habitat: </string>
    <string name="ts">Top speed: 70 mph</string>
    <string name="slogan">"The fastest land mammal in the world!"</string>
    <string name="cip">Color: </string>
    <string name="lf">Lifespan: </string>
    <string name="diet">Diet: </string>
    <string name="type">Type: </string>
</resources>