<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/bck">
    <TextView
        android:id="@+id/animal_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/a" />
    <TextView
        android:id="@+id/slogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/animal_name"
        app:layout_constraintStart_toStartOf="@id/animal_name"
        app:layout_constraintTop_toBottomOf="@id/animal_name"
        tools:text="@string/slogan" />
    <TextView
        android:id="@+id/gp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/slogan"
        app:layout_constraintStart_toStartOf="@id/slogan"
        app:layout_constraintTop_toBottomOf="@id/slogan"
        tools:text="@string/gp" />
    <TextView
        android:id="@+id/hab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/gp"
        app:layout_constraintStart_toStartOf="@id/gp"
        app:layout_constraintTop_toBottomOf="@id/gp"
        tools:text="@string/hab" />
    <TextView
        android:id="@+id/ts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/hab"
        app:layout_constraintStart_toStartOf="@id/hab"
        app:layout_constraintTop_toBottomOf="@id/hab"
        tools:text="@string/ts" />
</androidx.constraintlayout.widget.ConstraintLayout>
